# src/Dorc.PersistentData/Sources/Interfaces/IBundledRequestsPersistentSource.cs
@@ -1,5 +1,4 @@
 ﻿using Dorc.ApiModel;
-using Dorc.PersistentData.Model;
 
 namespace Dorc.PersistentData.Sources.Interfaces;
 
@@ -7,4 +6,6 @@ public interface IBundledRequestsPersistentSource
 {
     IEnumerable<BundledRequestsApiModel> GetRequestsForBundle(string bundleName);
     IEnumerable<BundledRequestsApiModel> GetBundles(string projectName);
+    void AddRequestToBundle(BundledRequestsApiModel model);
+    void UpdateRequestInBundle(BundledRequestsApiModel model); // Added missing method
 }
