# src/dorc-web/src/apis/dorc-api/swagger.json
@@ -280,6 +280,30 @@
         }
       }
     },
+    "/ApiConfig": {
+      "get": {
+        "tags": [
+          "ApiConfig"
+        ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ApiConfigModel"
+                }
+              },
+              "text/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ApiConfigModel"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
     "/": {
       "get": {
         "tags": [
@@ -300,6 +324,170 @@
                 }
               }
             }
+          }
+        }
+      }
+    },
+    "/BundledRequests": {
+      "get": {
+        "tags": [
+          "BundledRequests"
+        ],
+        "parameters": [
+          {
+            "name": "projectNames",
+            "in": "query",
+            "schema": {
+              "type": "array",
+              "items": {
+                "type": "string"
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/BundledRequestsApiModel"
+                  }
+                }
+              },
+              "text/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/BundledRequestsApiModel"
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/BundledRequests/RequestsForBundle": {
+      "get": {
+        "tags": [
+          "BundledRequests"
+        ],
+        "parameters": [
+          {
+            "name": "bundleName",
+            "in": "query",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/BundledRequestsApiModel"
+                  }
+                }
+              },
+              "text/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/BundledRequestsApiModel"
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/BundledRequests/Create": {
+      "post": {
+        "tags": [
+          "BundledRequests"
+        ],
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/BundledRequestsApiModel"
+              }
+            },
+            "text/json": {
+              "schema": {
+                "$ref": "#/components/schemas/BundledRequestsApiModel"
+              }
+            },
+            "application/*+json": {
+              "schema": {
+                "$ref": "#/components/schemas/BundledRequestsApiModel"
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      }
+    },
+    "/BundledRequests/Update": {
+      "put": {
+        "tags": [
+          "BundledRequests"
+        ],
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/BundledRequestsApiModel"
+              }
+            },
+            "text/json": {
+              "schema": {
+                "$ref": "#/components/schemas/BundledRequestsApiModel"
+              }
+            },
+            "application/*+json": {
+              "schema": {
+                "$ref": "#/components/schemas/BundledRequestsApiModel"
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      }
+    },
+    "/BundledRequests/Delete": {
+      "delete": {
+        "tags": [
+          "BundledRequests"
+        ],
+        "parameters": [
+          {
+            "name": "bundleName",
+            "in": "query",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
           }
         }
       }
@@ -780,48 +968,6 @@
               "text/json": {
                 "schema": {
                   "type": "string"
-                }
-              }
-            }
-          }
-        }
-      }
-    },
-    "/MakeLikeProd/BundledRequests": {
-      "get": {
-        "tags": [
-          "MakeLikeProd"
-        ],
-        "parameters": [
-          {
-            "name": "projectNames",
-            "in": "query",
-            "schema": {
-              "type": "array",
-              "items": {
-                "type": "string"
-              }
-            }
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "OK",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "type": "array",
-                  "items": {
-                    "$ref": "#/components/schemas/BundledRequestsApiModel"
-                  }
-                }
-              },
-              "text/json": {
-                "schema": {
-                  "type": "array",
-                  "items": {
-                    "$ref": "#/components/schemas/BundledRequestsApiModel"
-                  }
                 }
               }
             }
@@ -3178,88 +3324,6 @@
         }
       }
     },
-    "/RefDataEnvironmentsDetails/GetPossibleEnvironmentChildren": {
-      "get": {
-        "tags": [
-          "RefDataEnvironmentsDetails"
-        ],
-        "parameters": [
-          {
-            "name": "id",
-            "in": "query",
-            "schema": {
-              "type": "integer",
-              "format": "int32"
-            }
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "OK",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "type": "array",
-                  "items": {
-                    "$ref": "#/components/schemas/EnvironmentApiModel"
-                  }
-                }
-              },
-              "text/json": {
-                "schema": {
-                  "type": "array",
-                  "items": {
-                    "$ref": "#/components/schemas/EnvironmentApiModel"
-                  }
-                }
-              }
-            }
-          }
-        }
-      }
-    },
-    "/RefDataEnvironmentsDetails/SetParentForEnvironment": {
-      "put": {
-        "tags": [
-          "RefDataEnvironmentsDetails"
-        ],
-        "parameters": [
-          {
-            "name": "parentEnvId",
-            "in": "query",
-            "schema": {
-              "type": "integer",
-              "format": "int32"
-            }
-          },
-          {
-            "name": "childEnvId",
-            "in": "query",
-            "schema": {
-              "type": "integer",
-              "format": "int32"
-            }
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "OK",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/ApiBoolResult"
-                }
-              },
-              "text/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/ApiBoolResult"
-                }
-              }
-            }
-          }
-        }
-      }
-    },
     "/RefDataEnvironmentsDetails": {
       "get": {
         "tags": [
@@ -3334,6 +3398,88 @@
             "in": "query",
             "schema": {
               "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ApiBoolResult"
+                }
+              },
+              "text/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ApiBoolResult"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/RefDataEnvironmentsDetails/GetPossibleEnvironmentChildren": {
+      "get": {
+        "tags": [
+          "RefDataEnvironmentsDetails"
+        ],
+        "parameters": [
+          {
+            "name": "id",
+            "in": "query",
+            "schema": {
+              "type": "integer",
+              "format": "int32"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/EnvironmentApiModel"
+                  }
+                }
+              },
+              "text/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/EnvironmentApiModel"
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/RefDataEnvironmentsDetails/SetParentForEnvironment": {
+      "put": {
+        "tags": [
+          "RefDataEnvironmentsDetails"
+        ],
+        "parameters": [
+          {
+            "name": "parentEnvId",
+            "in": "query",
+            "schema": {
+              "type": "integer",
+              "format": "int32"
+            }
+          },
+          {
+            "name": "childEnvId",
+            "in": "query",
+            "schema": {
+              "type": "integer",
+              "format": "int32"
             }
           }
         ],
@@ -6308,6 +6454,28 @@
         },
         "additionalProperties": false
       },
+      "ApiConfigModel": {
+        "type": "object",
+        "properties": {
+          "AuthenticationScheme": {
+            "type": "string",
+            "nullable": true
+          },
+          "OAuthAuthority": {
+            "type": "string",
+            "nullable": true
+          },
+          "OAuthUiClientId": {
+            "type": "string",
+            "nullable": true
+          },
+          "OAuthUiRequestedScopes": {
+            "type": "string",
+            "nullable": true
+          }
+        },
+        "additionalProperties": false
+      },
       "ApiEndpoints": {
         "type": "object",
         "properties": {
@@ -6739,14 +6907,19 @@
           "IsOwner": {
             "type": "boolean"
           },
+          "ParentId": {
+            "type": "integer",
+            "format": "int32",
+            "nullable": true
+          },
+          "IsParent": {
+            "type": "boolean"
+          },
           "Details": {
             "$ref": "#/components/schemas/EnvironmentDetailsApiModel"
           },
           "ParentEnvironment": {
             "$ref": "#/components/schemas/EnvironmentApiModel"
-          },
-          "IsParent": {
-            "type": "boolean"
           },
           "ChildEnvironments": {
             "type": "array",
